--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     ".": {
       "import": "./dist/vite-component-library-template.es.js",
       "require": "./dist/vite-component-library-template.umd.js"
-    },
-    "./dist/style.css": "./dist/style.css"
+    }
   },
   "engines": {
     "node": "18"
@@ -43,8 +42,7 @@
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "5.60.0",
     "@vitejs/plugin-react": "4.0.1",
-    "@vitest/coverage-c8": "0.32.2",
-    "autoprefixer": "10.4.14",
+    "@vitest/coverage-v8": "^0.32.4",
     "babel-loader": "9.1.2",
     "eslint": "8.43.0",
     "eslint-config-prettier": "8.8.0",
@@ -64,7 +62,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "storybook": "7.0.23",
-    "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "vite": "4.3.9",
     "vite-plugin-dts": "2.3.0",
