--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
   },
   "devDependencies": {
     "@babel/core": "7.22.5",
+    "@chakra-ui/react": "^2.7.1",
+    "@chakra-ui/storybook-addon": "^5.0.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@storybook/addon-essentials": "7.0.23",
     "@storybook/addon-interactions": "7.0.23",
     "@storybook/addon-links": "7.0.23",
@@ -52,6 +56,7 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-storybook": "0.6.12",
+    "framer-motion": "^10.12.18",
     "husky": "8.0.3",
     "jsdom": "22.1.0",
     "json": "11.0.0",
@@ -68,8 +73,9 @@
     "vitest": "0.32.2"
   },
   "peerDependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@chakra-ui/react": "^2.7.0"
   },
   "files": [
     "dist"
